tests/compile_fail/use_uppercase.rs
use bevy_input_sequence::prelude::*;

fn main() {
    let _ = key!(a);
}
